<resources>
    <string name="app_name">Aplikasi SIPJ</string>
    <string name="online_report_trouble">Online Report Trouble</string>
    <string name="dinas_perhubungan">Dinas Perhubungan</string>
    <string name="data_survey_jalan">Data Survey Jalan</string>
    <string name="admin">Admin</string>
    <string name="list_tim">List Tim</string>
    <string name="list_user">List User</string>
    <string name="surat">Surat</string>
    <string name="statistika">Statistika</string>
    <string name="statistik_tim">Statistik Tim</string>
    <string name="logout">Logout</string>
    <string name="logo_dishub">Logo Dishub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="alamat">Alamat</string>
    <string name="confirm">CONFIRM</string>
    <string name="track_lokasi">Track lokasi</string>
    <string name="Rambu">Rambu</string>
    <string name="ZebraCross">Zebra Cross</string>
    <string name="TrafficLight">Traffic Light</string>
    <string name="Barrier">Barrier</string>
    <string name="Marka">Marka</string>
    <string name="WarningLight">Warning Light</string>
    <string name="RPPJ">RPPJ</string>
    <string name="PapanNamaJalan">Papan Nama Jalan</string>
    <string name="SpeedBump">Speed Bump</string>
    <string name="CerminTikungan">Cermin Tikungan</string>
    <string name="Rencana">Rencana</string>
    <string name="Baru">Baru</string>
    <string name="Normal">Normal</string>
    <string name="RusakRingan">Rusak Ringan</string>
    <string name="RusakSedang">Rusak Sedang</string>
    <string name="RusakBerat">Rusak Berat</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_here">Login Here</string>
    <string name="login">Login</string>
    <string name="welcome">Selamat datang di aplikasi SIPJ</string>
    <string name="sign_up_here">Sign Up Here</string>
</resources>