<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/nav_admin"
            android:title="@string/admin"
            android:icon="@drawable/admin_icon"/>

        <item
            android:id="@+id/nav_listTim"
            android:title="@string/list_tim"
            android:icon="@drawable/team_icon"/>

        <item
            android:id="@+id/nav_listUser"
            android:title="@string/list_user"
            android:icon="@drawable/user_icon"/>

        <item
            android:id="@+id/nav_surat"
            android:title="@string/surat"
            android:icon="@drawable/surat_icon"/>

        <item
            android:id="@+id/nav_statistika"
            android:title="@string/statistika"
            android:icon="@drawable/chart_icon"/>

        <item
            android:id="@+id/nav_statistikTim"
            android:title="@string/statistik_tim"
            android:icon="@drawable/chart_icon"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout_icon"/>

    </group>

</menu>