<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegister.SignUp">

    <TextView
        android:id="@+id/tv_judulSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/sign_up"
        />

    <EditText
        android:id="@+id/et_registerFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tv_judulSignup"
        android:hint="@string/full_name"
        />

    <EditText
        android:id="@+id/et_registerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/et_registerFullName"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/et_registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/et_registerUsername"
        android:hint="@string/password"
        />


    <Button
        android:id="@+id/btn_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@id/et_registerPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/tv_createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_Signup"
        android:text="@string/login_here"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        />

</RelativeLayout>