<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@drawable/greybackground"
    android:gravity="bottom"
    android:padding="20dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_dishub_removebg_preview"
        android:contentDescription="@string/logo_dishub" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_report_trouble"
        android:textColor="@color/white"
        android:textSize="26sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_survey_jalan"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</LinearLayout>