<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="LoginRegister.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="75dp">

        <ImageView
            android:layout_width="126dp"
            android:layout_height="157dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_dishub" />

        <TextView
            android:id="@+id/tv_Login"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>

    <EditText
        android:id="@+id/et_loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Login"
        android:layout_marginTop="25dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/et_loginUsername"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/et_loginPassword"
        android:text="@string/login"
        android:textSize="15dp"
        android:padding="13dp"/>

<!--    <TextView-->
<!--        android:id="@+id/tv_createAccount"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/btn_Login"-->
<!--        android:text="@string/sign_up_here"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:textAlignment="center"-->
<!--        />-->

</LinearLayout>